--- a/public/css/style.default.css
+++ b/public/css/style.default.css
@@ -2413,7 +2413,7 @@ textarea.form-control-lg {
 }
 
 .form-check-input:checked {
-    background-color: #dcb14a;
+    background-color: #ccebfb;
     border-color: #dcb14a;
 }
 
