--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,5 +1,10 @@
 /* your styles go here */
 
+* {
+    user-select: none !important;
+    box-sizing: border-box !important;
+}
+
 .nav-link i {
     padding-right: 10px;
 }
@@ -13,6 +18,47 @@
 
 .btn-dark {
     margin: 5px !important;
+}
+
+.img-fluid {
+    opacity: 20%;
+    animation: fadeUpAnimation 1s forwards;
+    transition: opacity 0.3s ease, filter 0.3s ease-in-out;
+    box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
+    animation-delay: 200ms;
+    border-radius: 10px !important;
+}
+
+.img-fluid:hover {
+    transition: .2s ease-in-out !important;
+    transform: scale(1.02) !important;
+    box-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+}
+
+@keyframes fadeUpAnimation {
+    to {
+        opacity: 100%;
+    }
+}
+
+.btn {
+    border-radius: 5px !important;
+}
+
+.navbar-toggler {
+    border: none !important;
+    outline: none;
+}
+
+.navbar-nav {
+    text-align: right;
+    justify-content: end;
+    align-items: end;
+}
+
+.navbar-toggler:focus {
+    border: none !important;
+    outline: none;
 }
 
 #product-search {
@@ -30,12 +76,15 @@
 .categoria {
     cursor: pointer;
     transition: .2s ease-in-out;
+    text-decoration: none;
+    list-style: none;
+    font-size: 10pt;
+    margin: 0 !important;
 }
 
 .categoria:hover {
     background-color: black;
     color: white;
-    transition: .2s ease-in-out;
 }
 
 .sectionprodutos {
@@ -49,4 +98,160 @@
 
 .modal-content {
     border-radius: 20px !important;
+}
+
+#logoempresa {
+    display: none;
+    margin-left: 15vw;
+}
+
+.btn-close {}
+
+#product-img2 {
+    transition: .2s ease-in-out;
+    background-color: transparent !important;
+    border-radius: 20px !important;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+}
+
+.swiper-slide {
+    background-color: transparent !important;
+}
+
+.animsition-link img {
+    border-radius: 10px;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+}
+
+#list-pedidos {
+    margin-top: 50px !important;
+    margin-bottom: 50px !important;
+    margin: 0 auto;
+    border-radius: 20px !important;
+    width: 80%;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.img-loading {
+    margin: 0 auto;
+}
+
+th,
+td {
+    border-radius: 5px !important;
+    padding: 8px;
+    text-align: center;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+tr button {
+    margin-top: 20px !important;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.fa-trash-alt {
+    transform: scale(1.2);
+    transition: .2s ease-in-out;
+}
+
+.fa-trash-alt:hover {
+    color: red !important;
+    transition: .2s ease-in-out;
+    transform: scale(1.3);
+}
+
+.card-body {
+    border-radius: 10px !important;
+}
+
+
+/* 
+---------------------------------------------
+preloader
+--------------------------------------------- 
+*/
+
+#preloader {
+    overflow: hidden;
+    background-color: black !important;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    position: fixed;
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
+
+#preloader img {
+    width: 200px;
+}
+
+#banner {
+    transition: .2s ease-in-out !important;
+    box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
+}
+
+#banner:hover {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+    transition: .2s ease-in-out !important;
+}
+
+#imgl {
+    background-color: black;
+    border: 10px;
+}
+
+
+/* Estilos para tablets (768px a 1023px) */
+
+@media (min-width: 768px) and (max-width: 1023px) {
+    .container {
+        justify-content: center;
+        margin: 0 auto !important;
+    }
+    #logoempresa {
+        display: block;
+        margin: 0 auto !important;
+        width: 150px;
+        padding: 0 !important;
+    }
+    #banner {
+        background-image: none !important;
+        background-color: white !important;
+    }
+}
+
+
+/* Estilos para celulares (até 767px) */
+
+@media (max-width: 767px) {
+    #logoempresa {
+        display: block;
+        margin: 0 auto !important;
+        width: 150px;
+        padding: 0 !important;
+    }
+    .container {
+        justify-content: center;
+        margin: 0 auto !important;
+    }
+    #banner {
+        background-image: none !important;
+        background-color: white !important;
+    }
+    /* Outros estilos específicos para celulares aqui */
 }
